--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,3 +94,10 @@ li a {
   padding-left: 0;
 }
 
+.heading-nav {
+    color: #fff;
+    float: left;
+    padding-top: 15px;
+    padding-right: 20px;
+}
+
