--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,31 +41,29 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Trial Docket</a>
+        <a class="navbar-brand" href="/">Trial Docket</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-          <ul class="nav navbar-right col-md-4">
-            <% if current_user %>
-            <li class="col-md-8 user-name">
-              <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, 
-                                                            edit_user_registration_path, title: 'Edit Profile' %>
-            </li>
-            <li class="col-md-1">&nbsp;</li>
-            <li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path, 
-                                  class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
+          <% if user_signed_in? %>
+            <ul class="nav navbar-nav">
+              <li><%= link_to "Add A New Client", "#"  %></li>
+              <li><%= link_to "See All Clients", clients_path  %></li>
+            </ul>
+            <% end %>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <span class = "heading-nav"><li><%= link_to 'Log Out', logout_path, method: :delete %></li></span>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="heading">Your Profile <%="[Admin]" if current_user.admin? %></span><span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Edit Your Profile", edit_user_path(current_user) %></li>
+                  <li><%= link_to "View Your Profile", user_path(current_user) %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
             <% else %>
-            <li class="col-md-4 pull-right">
-              <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
-            </li>
+              <span class = "heading-nav"><li><%= link_to 'Log In', user_session_path %></li></span>
+              <span class = "heading-nav"><li><%= link_to 'Sign Up', new_user_registration_path %></li></span>
             <% end %>
           </ul>
         </div>
@@ -81,7 +79,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Codetronics LLC 2018</p>
       </footer>
 
     </div> <!-- /container -->
