fixed signin/out bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,9 +95,10 @@ li a {
 }
 
 .heading-nav {
-    color: #fff;
-    float: left;
+    color: #000;
+    float: right;
     padding-top: 15px;
     padding-right: 20px;
+    list-style-type: none;
 }
 
