--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+ <%= render "layouts/navigation" %>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -39,35 +40,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <a class="navbar-brand" href="/">Trial Docket</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <% if user_signed_in? %>
-            <ul class="nav navbar-nav">
-              <li><%= link_to "Add A New Client", "#"  %></li>
-              <li><%= link_to "See All Clients", clients_path  %></li>
-            </ul>
-            <% end %>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <span class = "heading-nav"><li><%= link_to 'Log Out', logout_path, method: :delete %></li></span>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="heading">Your Profile <%="[Admin]" if current_user.admin? %></span><span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Edit Your Profile", edit_user_path(current_user) %></li>
-                  <li><%= link_to "View Your Profile", user_path(current_user) %></li>
-                  <li role="separator" class="divider"></li>
-                </ul>
-              </li>
-            <% else %>
-              <span class = "heading-nav"><li><%= link_to 'Log In', user_session_path %></li></span>
-              <span class = "heading-nav"><li><%= link_to 'Sign Up', new_user_registration_path %></li></span>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
+    
 
     <div class="container">
       <div class="row">
