Added CRUD functionality to clients - merging branch

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,3 +106,9 @@ li a {
   margin-bottom: 15px;
 }
 
+.client-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
