--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -13,17 +13,17 @@
                             Alleged Offenses: <%=client.alleged_offenses%><br/>
                                 <div class = "client-meta-details">
                                     <small>
-                                        Created by: <%= current_user if client.user_id %>,
-                                        <%= time_ago_in_words(client.created_at) %> ago,
-                                        last updated: <%= time_ago_in_words(client.updated_at) %> ago
+                                        Created: <%= time_ago_in_words(client.created_at) %> ago,
+                                        Last updated: <%= time_ago_in_words(client.updated_at) %> ago
                                     </small>
                                 </div>
                         </div>
                     </div>
                 </div>
                 <div class="client-actions">
-                <%= link_to "Update this client", edit_client_path(client), class:"btn btn-xs btn-primary" %>
-                <%= link_to "Delete this client", client_path(client), method: :delete, data: { confirm:"Are you sure you want to delete this client?" }, class:"btn btn-xs btn-danger" %>
+                <%= link_to "View This Client", client_path(client), class:"btn btn-xs btn-primary" %>
+                <%= link_to "Update This Client", edit_client_path(client), class:"btn btn-xs btn-primary" %>
+                <%= link_to "Delete This Client", client_path(client), method: :delete, data: { confirm:"Are you sure you want to delete this client?" }, class:"btn btn-xs btn-danger" %>
                 <%= link_to "Client List", clients_path, class: "btn btn-xs btn-success" %>
                 </div>
             </div>
