--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -4,13 +4,13 @@
         <ul class = "listing">
             <div class = 'row center'>
                 <div class = 'col-md-4 col-md-offset-5'> 
-                    <span class = "heading"><li>Created by:</li></span>
-                    <li><%= link_to gravatar_for(@client.user), user_path(@client.user) %></li>
+                    <span class = "heading"><li></li></span>
+                    
                     <li class = "client-name">
-                        <%= link_to @client.user.username, user_path(@client.user) %>
+                        
                     </li>
                     <li><small>
-                        <%= pluralize(@client.user.clients.count, "client") if @client.user.clients %>
+                        
                     </small></li>
                 </div>
             </div>
@@ -33,7 +33,7 @@
 <h4 class = "center description">Case Outcome: </h4><%= format_value(@client.case_outcome)%>
     <div class="client-actions">
             <%= link_to "Update this client", edit_client_path(@client), class:"btn btn-xs btn-primary" %>
-            <%= link_to "Add or View Client Documents", new_image_path(@client), class:"btn btn-xs btn-primary" %>
+            <%= link_to "Add or View Client Documents", images_path, class:"btn btn-xs btn-primary" %>
             <%= link_to "Delete this client", client_path(@client), method: :delete, data: { confirm:"Are you sure you want to delete this client?" }, class:"btn btn-xs btn-danger" %>
         <%= link_to "Client List", clients_path, class: "btn btn-xs btn-success" %>
     </div>
