--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,4 +1,5 @@
 <%= render 'layouts/form' %>
+<div class="non-landing">
 <div class = "col-md-6">
     <div class="form">
         <h1>Register A Client</h1>
@@ -71,4 +72,5 @@
     <% end %>
     
     <%=link_to 'Back to clients list', clients_path%>
+</div>
 </div>
