--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -33,7 +33,8 @@
 <h4 class = "center description">Case Outcome: </h4><%= format_value(@client.case_outcome)%>
     <div class="client-actions">
             <%= link_to "Update this client", edit_client_path(@client), class:"btn btn-xs btn-primary" %>
-            <%= link_to "Add or View Client Documents", new_image_path(@client), class:"btn btn-xs btn-primary" %>
+            <%= link_to "Add Client Documents", new_image_path(@client), class:"btn btn-xs btn-primary" %>
+            <%= link_to "View Client Documents", images_path(@client), class:"btn btn-xs btn-primary" %>
             <%= link_to "Delete this client", client_path(@client), method: :delete, data: { confirm:"Are you sure you want to delete this client?" }, class:"btn btn-xs btn-danger" %>
         <%= link_to "Client List", clients_path, class: "btn btn-xs btn-success" %>
     </div>
