--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Image -%>
+<div class="container">
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -29,6 +30,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_image_path,
-            :class => 'btn btn-primary' %>
+<%= link_to t('.new', :default => t("helpers.links.new")), new_image_path, :class => 'btn btn-primary' %>
+<%= link_to "Back To Client List", clients_path, class:"btn btn-md btn-success" %>
+</div>
