--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,8 @@
 
     
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
@@ -53,8 +52,5 @@
       <footer>
         <p>&copy; Codetronics LLC 2018</p>
       </footer>
-
-    </div> <!-- /container -->
-
   </body>
 </html>
